<resources>
    <string name="app_name">MyCalculator</string>
    <string name="title">Calculate Standard Weight</string>
    <string name="gender">Gender:  </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height:</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculate">CALCULATE</string>
</resources>
